--- a/django/templates/base.html
+++ b/django/templates/base.html
@@ -20,7 +20,7 @@
 
 <body>
 
-  <div class="header" style="background: rgb(177, 177, 177) url('img/header.png') no-repeat fixed center">
+  <div class="header" style="background: rgb(177, 177, 177) url('../static/img/header.png') no-repeat fixed center">
     
     <nav class="navbar navbar-dark navbar-expand-md navigation-clean-search">
         <div class="container"><a class="navbar-brand" href="#">Family Doctor X</a>
@@ -62,6 +62,20 @@
             </div>
         </div>
     </nav>
+
+    <div class="container hero">
+        <div class="row">
+            <div class="col-12 col-lg-6 col-xl-5 offset-xl-1">
+                <h1>Exceptional Medical Care for All Ages.</h1>
+                <p> At our Medical Center
+                    we combine world class medicine
+                    with compassionate care. </p>
+                    <a href="appointment.html" class="btn btn-light btn-lg action-button" type="button">Book an appointment</a>
+            </div>
+
+        </div>
+    </div>
+</div>
    
     {% block cta %} {% endblock cta %}
 </div>
