--- a/django/templates/index.html
+++ b/django/templates/index.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 {% load static %}
+
 <section class="container py-5"  style="margin-block:200px;" id="team">
     <div class="row text-center ">
         <div class="col-lg-8 mx-auto">
@@ -27,7 +28,7 @@
 
             <!-- Team item -->
             <div class="col-xl-3 col-sm-6 mb-5">
-                <div class="bg-white rounded shadow-sm py-5 px-4"><img src="/img/team2.jpg" alt="" class=" mh-100 rounded-circle mb-3 img-thumbnail shadow-sm">
+                <div class="bg-white rounded shadow-sm py-5 px-4"><img src="{% static '/img/team2.jpg' %}" alt="" class=" mh-100 rounded-circle mb-3 img-thumbnail shadow-sm">
                     <h5 class="mb-0">Dr Samuel </h5>
                     <span class="small text-uppercase text-muted">Consultant cardiothoracic</span>
                 </div>
@@ -35,7 +36,7 @@
 
             <!-- Team item -->
             <div class="col-xl-3 col-sm-6 mb-5">
-                <div class="bg-white rounded shadow-sm py-5 px-4"><img src="/img/team3.jpg" alt="" class=" mh-100img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+                <div class="bg-white rounded shadow-sm py-5 px-4"><img src="{% static '/img/team3.jpg' %}" alt="" class=" mh-100img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
                     <h5 class="mb-0">Dr Sarra</h5>
                     <span class="small text-uppercase text-muted">Consultant dermatologist</span>
                 </div>
@@ -43,7 +44,7 @@
 
             <!-- Team item -->
             <div class="col-xl-3 col-sm-6 mb-5">
-                <div class="bg-white rounded shadow-sm py-5 px-4"><img src="/img/team4.png" alt="" class=" mh-100img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+                <div class="bg-white rounded shadow-sm py-5 px-4"><img src="{% static '/img/team4.png' %}" alt="" class=" mh-100img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
                     <h5 class="mb-0">DR John</h5>
                     <span class="small text-uppercase text-muted">Consultant Obstetrician</span>
                 </div>
@@ -66,7 +67,7 @@
       <!-- Team Member 1 -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="/img/service1.jpg" class="card-img-top" alt="...">
+          <img src="{% static '/img/service1.jpg' %}" class="card-img-top" alt="...">
           <div class="card-body text-center">
             <h5 class="card-title mb-0">Primary Care</h5>
             <div class="card-text text-black-50">Your personalized medical professionals.</div>
@@ -76,7 +77,7 @@
       <!-- Team Member 2 -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="/img/service2.jpg" class="card-img-top" alt="...">
+          <img src="{% static '/img/service2.jpg' %}" class="card-img-top" alt="...">
           <div class="card-body text-center">
             <h5 class="card-title mb-0">Dermatology</h5>
             <div class="card-text text-black-50">Your skin care made easy.</div>
@@ -86,7 +87,7 @@
       <!-- Team Member 3 -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="/img/service3.jpg" class="card-img-top" alt="...">
+          <img src="{% static '/img/service3.jpg' %}" class="card-img-top" alt="...">
           <div class="card-body text-center">
             <h5 class="card-title mb-0">Team Member</h5>
             <div class="card-text text-black-50">Web Developer</div>
@@ -96,7 +97,7 @@
       <!-- Team Member 4 -->
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-0 shadow">
-          <img src="/img/service4.jpg" class="card-img-top" alt="...">
+          <img src="{% static '/img/service4.jpg' %}" class="card-img-top" alt="...">
           <div class="card-body text-center">
             <h5 class="card-title mb-0">PrEP Therapy</h5>
             <div class="card-text text-black-50">Stay safe if you are at high exposure of HIV.</div>
@@ -121,17 +122,17 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">		
             <div class="carousel-item active">
-                <div class="img-box"><img src="/img/patient1.jpg" alt=""></div>
+                <div class="img-box"><img src="{% static '/img/patient1.jpg' %}" alt=""></div>
                 <p class="testimonial">Phasellus vitae suscipit justo. Mauris pharetra feugiat ante id lacinia. Etiam faucibus mauris id tempor egestas. Duis luctus turpis at accumsan tincidunt. Phasellus risus risus, volutpat vel tellus ac, tincidunt fringilla massa. Etiam hendrerit dolor eget rutrum.</p>
                 <p class="overview">Michael Holz</p>
             </div>
             <div class="carousel-item">
-                <div class="img-box"><img src="/img/patient2.jpg" alt=""></div>
+                <div class="img-box"><img src="{% static '/img/patient2.jpg' %}" alt=""></div>
                 <p class="testimonial">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante. Vestibulum idac nisl bibendum scelerisque non non purus. Suspendisse varius nibh non aliquet.</p>
                 <p class="overview">Antonio Moreno</p>
             </div>
             <div class="carousel-item">
-                <div class="img-box"><img src="/img/patient3.jpg" alt=""></div>
+                <div class="img-box"><img src="{% static '/img/patient3.jpg' %}" alt=""></div>
                 <p class="testimonial">Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi suscipit tincidunt. Utmtc tempus dictum risus. Pellentesque viverra sagittis quam at mattis. Suspendisse potenti. Aliquam sit amet gravida nibh, facilisis gravida odio. Phasellus auctor velit.</p>
                 <p class="overview">Paula Wilson</p>
                 
@@ -183,7 +184,8 @@
   
           <!-- Contact form -->
           <div class="col-sm-6">
-            <form role="form" name="ajax-form" id="ajax-form" method="post" class="form-main">
+            <form role="form" name="ajax-form" id="ajax-form" method="post" class="form-main" action="{% url 'home' %}">
+              {% csrf_token %}
   
               <div class="form-group">
                 <label for="name2">Name</label>
